tests/unit/language/overloads/unknown_member_errors.arche
// RUN: ! %arche build -o %t %s 2>&1

a :: func(x: int) -> int {
  return x;
}
g :: func { a, missing }
// error: unknown member 'missing' in group 'g'
